Bug 138771 - CRASH: importing specific document
Summary: CRASH: importing specific document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.beta1+
Hardware: All All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:7.2.0 target:7.4.0 target:7.3.0.2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2020-12-09 12:00 UTC by Xisco Faulí
Modified: 2022-03-02 09:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (41.09 KB, text/plain)
2020-12-09 19:15 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-12-09 12:00:16 UTC
Steps to reproduce:
1. Open attachment 68361 [details] from bug 55820

-> Crash

Reproduced in

Version: 7.2.0.0.alpha0+
Build ID: 84af20ef3ea72190784e9e7be820684c2558ba8c
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-12-09 12:02:56 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c0864f26f3143ea81c65d3826fae32a8fd54c531

author	Michael Stahl <Michael.Stahl@cib.de>	2020-11-06 21:47:21 +0100
committer	Michael Stahl <michael.stahl@cib.de>	2020-11-19 14:21:10 +0100
commit c0864f26f3143ea81c65d3826fae32a8fd54c531 (patch)
tree 28f11c81b913cb1dcab50df954431932b7e90852
parent c74a2fd835474caf311be10703c985e2f916a83b (diff)
sw_fieldmarkhide: init fieldmark mode from options

Bisected with: bibisect-linux64-7.1

Adding Cc: to Michael Stahl
Comment 2 Julien Nabet 2020-12-09 19:15:18 UTC
Created attachment 168015 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I got an assertion.

I attached console logs + bt.
Comment 3 Julien Nabet 2020-12-09 19:20:53 UTC
I confirm I don't reproduce the assert and can open the file when reverting the quoted commit.
Comment 4 Justin L 2021-01-26 17:11:32 UTC
repro 7.2+ and bump
Comment 5 Xisco Faulí 2021-02-22 14:23:45 UTC
This issue is still reproducible in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 26d23c96d449c201e50df04023d9cbfd59d3d133
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2021-02-25 08:25:40 UTC
Hi Caolán,
Is this crash caught by the crashtesting instance ?
Comment 8 Xisco Faulí 2021-03-02 12:02:43 UTC
The commit has been reverted in https://cgit.freedesktop.org/libreoffice/core/commit/?id=70dd95aabd11b2146e2556c1da87da4a22d6f7b5
I guess we can close it.
Comment 9 Commit Notification 2021-03-03 07:53:47 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b072e279f5f775a4cd64d9b1275e5ab17d50f05

tdf138771: sw_ooxmlexport16: Add unittest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2021-12-23 08:11:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d11fb6cecaf72787973990e09cc7e8d03bdbf9d7

tdf#138771 sw_fieldmarkhide: fix overlaps in SwScriptInfo::InitScriptInfo()

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2021-12-23 08:30:05 UTC
fixed on master
Comment 12 Commit Notification 2021-12-23 11:11:37 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/bccc8fed262215024b70a1c2d98236dd6dde6738

tdf#138771 sw_fieldmarkhide: fix overlaps in SwScriptInfo::InitScriptInfo()

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.