tdf#138771 sw_fieldmarkhide: fix overlaps in SwScriptInfo::InitScriptInfo()

For sw_redlinehide, the MergedPara::extents were guaranteed not to
overlap with the MultiSelection aHiddenMulti in this function because
CalcHiddenRanges() took care to remove deleted redlines, but now extents
may be created for fieldmarks and it does nothing for fieldmarks.

Fix InitScriptInfo() to handle overlaps between extents and hidden
ranges.

(regression from c0864f26f3143ea81c65d3826fae32a8fd54c531)

Change-Id: Ic7aa432e1b5b960f3a865176cf9dbc096b2cfd5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127329
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit d11fb6cecaf72787973990e09cc7e8d03bdbf9d7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127260
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>