sw/source/core/text/porlay.cxx
@@ -1034,11 +1034,12 @@ void SwScriptInfo::InitScriptInfo(const SwTextNode& rNode,
         TextFrameIndex nOffset(0);
         std::optional<std::vector<sw::Extent>::const_iterator> oPrevIter;
         for (auto iter = pMerged->extents.begin(); iter != pMerged->extents.end();
-             oPrevIter = iter, ++iter)
+             oPrevIter = iter)
         {
             if (iter->pNode == pNode)
             {
                 nOffset += TextFrameIndex(iter->nEnd - iter->nStart);
+                ++iter;
                 continue; // skip extents at end of previous node
             }
             pNode = iter->pNode;
@@ -1054,39 +1055,66 @@ void SwScriptInfo::InitScriptInfo(const SwTextNode& rNode,
                 const Range& rRange = aHiddenMulti.GetRange( i );
                 const sal_Int32 nStart = rRange.Min();
                 const sal_Int32 nEnd = rRange.Max() + 1;
+                bool isStartHandled(false);
+                ::std::optional<sal_Int32> oExtend;
 
-                while (true)
+                if (nEnd <= iter->nStart)
+                {   // entirely in gap, skip this hidden range
+                    continue;
+                }
+
+                do
                 {
-                    // because of the selectRedLineDeleted call, never overlaps
-                    // extents, must be contained inside one extent
-                    assert(!(iter->nStart <= nStart && nStart < iter->nEnd && iter->nEnd < nEnd));
-                    assert(!(nStart < iter->nStart && iter->nStart < nEnd && nEnd <= iter->nEnd));
-                    if (iter->nStart <= nStart && nEnd <= iter->nEnd)
+                    if (!isStartHandled && nStart <= iter->nEnd)
                     {
-                        if (iter->nStart == nStart && !m_HiddenChg.empty()
+                        isStartHandled = true;
+                        if (nStart <= iter->nStart && !m_HiddenChg.empty()
                             && m_HiddenChg.back() == nOffset)
                         {
                             // previous one went until end of extent, extend it
-                            m_HiddenChg.back() += TextFrameIndex(nEnd - iter->nStart);
+                            oExtend.emplace(::std::min(iter->nEnd, nEnd) - ::std::max(iter->nStart, nStart));
                         }
-                        else // new one
+                        else
                         {
-                            m_HiddenChg.push_back(nOffset + TextFrameIndex(nStart - iter->nStart));
-                            m_HiddenChg.push_back(nOffset + TextFrameIndex(nEnd - iter->nStart));
+                            m_HiddenChg.push_back(nOffset + TextFrameIndex(::std::max(nStart - iter->nStart, sal_Int32(0))));
                         }
-                        break;
                     }
-                    else
+                    else if (oExtend)
                     {
-                        nOffset += TextFrameIndex(iter->nEnd - iter->nStart);
-                        ++iter;
-                        // because selectRedLineDeleted, must find it in pNode
-                        assert(iter != pMerged->extents.end());
-                        assert(iter->pNode == pNode);
+                        *oExtend += ::std::min(iter->nEnd, nEnd) - iter->nStart;
                     }
+                    if (nEnd <= iter->nEnd)
+                    {
+                        if (oExtend)
+                        {
+                            m_HiddenChg.back() += TextFrameIndex(*oExtend);
+                        }
+                        else
+                        {
+                            m_HiddenChg.push_back(nOffset + TextFrameIndex(::std::max(nEnd - iter->nStart, sal_Int32(0))));
+                        }
+                        break; // iterate to next hidden range
+                    }
+                    nOffset += TextFrameIndex(iter->nEnd - iter->nStart);
+                    ++iter;
+                }
+                while (iter != pMerged->extents.end() && iter->pNode == pNode);
+                if (iter == pMerged->extents.end() || iter->pNode != pNode)
+                {
+                    if (isStartHandled)
+                    {   // dangling end
+                        if (oExtend)
+                        {
+                            m_HiddenChg.back() += TextFrameIndex(*oExtend);
+                        }
+                        else
+                        {
+                            m_HiddenChg.push_back(nOffset);
+                        }
+                    } // else: beyond last extent in node, ignore
+                    break; // skip hidden ranges beyond last extent in node
                 }
             }
-            nOffset += TextFrameIndex(iter->nEnd - iter->nStart);
         }
     }
     else
